# bugle

./: .gitignore  Cargo.toml  REDME.md  rustfmt.toml
src/: emitter.rs  lib.rs  mutable.rs  receiver.rs  sender.rs  signal.rs  signal_fn.rs  signal_var.rs
src/async/: mutable.rs  signal.rs  signal_var.rs
