[package]
name = "bugle"
version = "0.0.1"
authors = [ "Chrislearn Young <chrislearn@hotmail.com>" ]
readme = "README.md"
documentation = "https://docs.rs/bugle"
repository = "https://github.com/chrislearn/bugle"
categories = ["asynchronous", "concurrency", "data-structures"]
keywords = ["signal"]
description = "simple signal system"
license = "MIT"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.42"
futures = { version = "0.3.8", features = [ "compat", "thread-pool" ] }
once_cell = "1.5.2"

tokio = { version = "1.0.0", features = [ "full" ] }